ADD application helper user_status method for the header buttons

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,9 @@
             <h2>Private Events</h2>
           <%end%>
         </div>
-        <div class="btn-group-lg">
+        <div class="btn-group-lg text-white">
+          <%= user_status[0]%>
+          <%= user_status[1]%>
         </div>
       </nav>
     </header>
