--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
 <div class="border mt-3 col-sm-5 py-2 mx-auto bg-theme text-white rounded shadow">
-  <h1 class="my-4">Sign Up</h1>
+  <div class="border-bottom text-center">
+    <h1>Private Events</h1>
+  </div>
+  <h1 class="my-4 text-center">Sign Up</h1>
   <%= form_for @user, html: {class: 'form-horizontal'} do |f|%>
     <div class="form-group">
       <%= f.label "User name: "%>
