ADD new, create and show event actions with their respective logics

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,10 @@
   background-color: #262335;
 }
 
-
+.hover-1:hover {
+  transform: scale(1.01);
+  border: 3px solid rgb(52, 61, 182);
+}
 
 // body
 body {
