--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,8 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
 
-<%= @user.username%>
+<% @user.events.each do |event|%>
+  <%= event.title%>
+  <%= event.description%>
+  <%= event.title%>
+<%end%>
