--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <div class="border d-flex flex-column">
   <div class="border-bottom pb-3 text-center mb-3">
-    <h2>All events</h2>
+    <h2>showing <%=pluralize(@events.count, 'Events')%></h2>
   </div>
   <div>
     <%@events.each do |event|%>
@@ -15,7 +15,7 @@
             <p class="h4"><%=event.description%></p>
           </div>
           <div class="card-footer bg-theme text-white px-0">
-            <p class="h4">Event Date:-  <%event.date%></p>
+            <p class="h4">Event Date:-  <%= date_format event %></p>
           </div>
         </div>
       <%end%>
