ADD invites model and controller added

--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -11,5 +11,7 @@
       <p class="h4">Event Date:-  <%= locals[:date]%></p>
     </div>
   </div>
+  <%= link_to "Attend", invites_path(:event_id), method: :post %>
+  
         
       
