ADD events a user created and is attending are now showing in the show view of user controller

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,11 @@
   border: 3px solid rgb(52, 61, 182);
 }
 
+.auto-scroll-height {
+  height: 70vh;
+  overflow: auto;
+}
+
 // body
 body {
   background-color: #f8f8f8;
