--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column">
   <div class="border-bottom pb-3 text-center mb-3">
-    <h2>Showing <%=pluralize(@events.count, 'Events')%></h2>
+    <h2>Showing <%=pluralize(@events.count, 'Event')%></h2>
   </div>
   <div>
     <%@events.each do |event|%>
