--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
           <%end%>
         </div>
         <div class="btn-group-lg text-white">
-          <% user_status.each do |button|%>
+          <% link_status.each do |button|%>
             <%= button%>
           <%end%>
         </div>
