--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -8,10 +8,12 @@
       <p class="h4"><%=locals[:desc]%></p>
     </div>
     <div class="card-footer bg-theme text-white px-0">
-      <p class="h4">Event Date:-  <%= locals[:date]%></p>
+      <p class="h5">Event Date:-  <%= locals[:date]%></p>
     </div>
-    <div>
-      <%= link_to "Attend", invites_path(:controller => "invites", :action => "create", :event_id=> locals[:event_id]), method: :post, class: 'btn disabled' %>
+    <div class="mt-3">
+      <% (user_attending?locals[:event_id]).each do |button| %>
+        <%= button%>
+      <%end%>
     </div>
   </div>
   
