ADD change invites table changed to attendance

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-6 auto-scroll-height">
+  <div class="col-sm-6 auto-scroll-height border">
     <h1>Upcoming events: <%=pluralize(@upcoming_events.count, 'Event')%></h1>
     <div class="d-flex flex-column">
       <div>
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <div class="col-sm-6 auto-scroll-height">
+  <div class="col-sm-6 auto-scroll-height border">
     <h1>Past events: <%=pluralize(@past_events.count, 'Event')%></h1>
     <div class="d-flex flex-column">
       <div>
